app/css/_projects.scss
//body { margin: 0; background: #333; }

//body { margin: 0; background: #333; }

.projBack {
  background-image: url("../img/proj/header2.jpg");
  // position: absolute;
  background-size: cover;
  width: 100%;
  height: 60vh;
  top: 0;
  z-index: 0;
  background-position: center;
  background-repeat: no-repeat;
  //background-color: grey;
}

.projectsPage {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  flex: auto;
  // margin-top: 40vh;
  padding-top: 5vh;

  a {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    width: 385px;
    height: 220px;
    margin-left: 2vw;
    margin-bottom: 3vw;
    background-size: cover;
    justify-content: center;
    text-decoration: none;

    .projectName {
      display: flex;
      width: 100%;
      //height: 3vw;
      font-size: 2em;
      padding: .2vw;
      background-color: rgba(0, 0, 0, 0.7);
      color: white;
      text-align: center;
      align-items: center;
      justify-content: center;
      border-top: 3px solid $redBorder;
      font-family: Aduma;
    }
  }
  a:hover {
    .projectName {
      background-color: $redBorder;
    }
  }
}

.mySwiper {
  position: absolute;
  width: 100%;
  height: 100vh;
  //height: 60vh;
  top: 0;
  z-index: 0;
  display: flex;
  justify-content: center;
  img {
    width: 100%;
  }
}

.swiperNavCon {
  display: flex;
  align-items: center;
  justify-content: center;
  /* margin-top: -11vw; */
  width: 100vw;
  height: 200px;
  //background-color: brown;
  /* z-index: 34; */
  position: absolute;
  .swiperNav {
    display: flex;
    flex-direction: row;
    /* position: absolute; */
    width: 75vw;
    justify-content: space-around;
    align-items: center;
    //background-color: #0000FF;
    align-self: center;

    .arrow {
      font-size: 5em;
      color: white;
      //background-color: purple;
    }
    .blank {
      //width: 40%;
      //background-color: #006600;
    }
  }
}

.projectsPage2 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  flex: auto;
  // margin-top: 80vh;
  padding-top: 5vh;
  padding-bottom: 5vw;

  a {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    width: 192px;
    height: 110px;
    margin-left: 2vw;
    margin-bottom: 3vw;
    background-size: cover;
    justify-content: center;
    text-decoration: none;

    .projectName {
      display: flex;
      width: 100%;
      //height: 3vw;
      font-size: 1.8em;
      padding: .2vw;
      background-color: rgba(0, 0, 0, 0.7);
      color: white;
      text-align: center;
      align-items: center;
      justify-content: center;
      border-top: 3px solid $redBorder;
      font-family: Aduma;
    }

  }
  a:hover {
    .projectName {
      background-color: $redBorder;
    }
  }
}

//@media  (max-width: 400px) {
//  .img{
//    width: 10px;
//  }
//}

//.projectsPage {
//
//
//  a {
//    padding: .5vw;
//    font-size: 0;
//    display: -ms-flexbox;
//    -ms-flex-wrap: wrap;
//    -ms-flex-direction: column;
//    //-webkit-flex-flow: row wrap;
//    flex-flow: row wrap;
//    display: -webkit-box;
//    display: flex;
//    width: 100%;
//    > div {
//      -webkit-box-flex: auto;
//      -ms-flex: auto;
//      flex: auto;
//      width: 200px;
//      margin: .5vw;
//      img {
//        width: 100%;
//        height: auto;
//      }
//    }
//  }
//  @media screen and (max-width: 400px) {
//    main {
//      padding: 0;
//      > div {
//        margin: 0;
//      }
//    }
//  }
//}

//
//.projectThumbs {
//  margin: 5px;
//  font-size: 0;
//  display: flex;
//  flex-flow: row wrap;
//  //justify-content: center;
// justify-content: space-between;
//
//}
//
//.projectThumb {
//  display: flex;
//  height: 13vw;
//  width: 18vw;
//  //margin:10px;
//  background-size: cover;
//  background-color: red;
//  align-items: flex-end;
//  justify-content: center;
//  .projectName {
//    width: 100%;
//    height: 2em;
//    background-color: rgba(0, 0, 0, 0.5);
//    color: white;
//    text-align: center;
//  }
//}
//
//.projectSlide{
//
//}
.swiper {
  .swiper-container {
    height: 100vh;

    .swiper-button-prev {
      background-image: $swiperPrevBtnBright;
    }

    .swiper-button-next {
      transform: rotate(180deg);
      left: 25px;
      background-image: $swiperNextBtnBright;
    }

    .swiper-slide {
      img {
        width: 100%;
      }
    }
  }
}

@media (max-width: 768px) {
  .projectsPage {
    a {
      margin-left: 0;
    }
  }
  .swiper {
    .swiper-container {
      height: auto;

      .swiper-slide {
        img {
          height: 100%;
        }
      }

    }
  }
}

.proj-details {
  //font
  font-family: Aduma;
  font-size: 1.5em;
  text-align: center;
}

//.proj-details {
//  margin-top: 50px;
//  position: relative;
//  width: 50%;
//  padding: 10px 20px;
//  font-size: 20px;
//  position: relative;
//  color: #fff;
//  //background: #5C5D5B;
//
//  h1 {
//    font-size: 1.2em;
//    span {
//      padding: 4px;
//    }
//  }
//
//  p {
//    font-size: 1em;
//  }
//
//  a {
//    color: $redBorder;
//    font-weight: bold;
//  }
//
//  &:after {
//    content: " ";
//    position: absolute;
//    display: block;
//    width: 100%;
//    height: 100%;
//    top: 0;
//    left: -20px;
//    z-index: -1;
//
//    background: #5C5D5B;
//
//    transform-origin: top left;
//    -ms-transform: skew(-30deg, 0deg);
//    -webkit-transform: skew(-30deg, 0deg);
//    transform: skew(-30deg, 0deg);
//  }
//}

